// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test TaskResultList/SQLStatementResultTable should match snapshot 1`] = `
<body>
  <div>
    <section
      class="css-1r1dawj"
    >
      <div
        class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell ellipsis-column-large-width"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell exec-status-column"
                          scope="col"
                        >
                          执行结果
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                        <td
                          class="ant-table-cell ellipsis-column-large-width"
                        >
                          <div
                            class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
                          >
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-bj9uhl"
                            >
                              <span>
                                <span
                                  class="hljs-keyword"
                                >
                                  CREATE
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  TABLE
                                </span>
                                 task (  id 
                                <span
                                  class="hljs-type"
                                >
                                  INT
                                </span>
                                 AUTO_INCREMENT 
                                <span
                                  class="hljs-keyword"
                                >
                                  PRIMARY
                                </span>
                                 KEY,  title 
                                <span
                                  class="hljs-type"
                                >
                                  VARCHAR
                                </span>
                                (
                                <span
                                  class="hljs-number"
                                >
                                  255
                                </span>
                                ) 
                                <span
                                  class="hljs-keyword"
                                >
                                  NOT
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  NULL
                                </span>
                                ,  description TEXT,  status ENUM(
                                <span
                                  class="hljs-string"
                                >
                                  'pending'
                                </span>
                                , 
                                <span
                                  class="hljs-string"
                                >
                                  'completed'
                                </span>
                                ) 
                                <span
                                  class="hljs-keyword"
                                >
                                  NOT
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  NULL
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-string"
                                >
                                  'pending'
                                </span>
                                ,  created_at 
                                <span
                                  class="hljs-type"
                                >
                                  TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                ,  updated_at 
                                <span
                                  class="hljs-type"
                                >
                                  TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  ON
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  UPDATE
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                );
                              </span>
                            </div>
                            <div
                              class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="audit-result-wrapper"
                          >
                            <div
                              class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <svg
                                  height="20"
                                  viewBox="0 0 16 16"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                    fill="#F66074"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell exec-status-column"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                          >
                            准备执行
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`test TaskResultList/SQLStatementResultTable should match snapshot 2`] = `
<body>
  <div>
    <section
      class="css-1r1dawj"
    >
      <div
        class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-scroll-horizontal"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell ellipsis-column-large-width"
                          scope="col"
                        >
                          执行语句
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          审核结果
                        </th>
                        <th
                          class="ant-table-cell exec-status-column"
                          scope="col"
                        >
                          执行结果
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          1
                        </td>
                        <td
                          class="ant-table-cell ellipsis-column-large-width"
                        >
                          <div
                            class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
                          >
                            <div
                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-bj9uhl"
                            >
                              <span>
                                <span
                                  class="hljs-keyword"
                                >
                                  CREATE
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  TABLE
                                </span>
                                 task (  id 
                                <span
                                  class="hljs-type"
                                >
                                  INT
                                </span>
                                 AUTO_INCREMENT 
                                <span
                                  class="hljs-keyword"
                                >
                                  PRIMARY
                                </span>
                                 KEY,  title 
                                <span
                                  class="hljs-type"
                                >
                                  VARCHAR
                                </span>
                                (
                                <span
                                  class="hljs-number"
                                >
                                  255
                                </span>
                                ) 
                                <span
                                  class="hljs-keyword"
                                >
                                  NOT
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  NULL
                                </span>
                                ,  description TEXT,  status ENUM(
                                <span
                                  class="hljs-string"
                                >
                                  'pending'
                                </span>
                                , 
                                <span
                                  class="hljs-string"
                                >
                                  'completed'
                                </span>
                                ) 
                                <span
                                  class="hljs-keyword"
                                >
                                  NOT
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  NULL
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-string"
                                >
                                  'pending'
                                </span>
                                ,  created_at 
                                <span
                                  class="hljs-type"
                                >
                                  TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                ,  updated_at 
                                <span
                                  class="hljs-type"
                                >
                                  TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  DEFAULT
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  ON
                                </span>
                                 
                                <span
                                  class="hljs-keyword"
                                >
                                  UPDATE
                                </span>
                                 
                                <span
                                  class="hljs-built_in"
                                >
                                  CURRENT_TIMESTAMP
                                </span>
                                );
                              </span>
                            </div>
                            <div
                              class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="audit-result-wrapper"
                          >
                            <div
                              class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <svg
                                  height="20"
                                  viewBox="0 0 16 16"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                    fill="#F66074"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell exec-status-column"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                          >
                            准备执行
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  <div
                    class="css-1vzrs2k"
                  >
                    <span
                      class="audit-result-drawer-number"
                    >
                      #1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-126skhi"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <section
                      class="wrapper-item"
                    >
                      <h3
                        class="ant-typography css-dev-only-do-not-override-txh9fw"
                      >
                        审核结果
                      </h3>
                      <div
                        class="wrapper-cont"
                      >
                        <div
                          class="result-item css-1v03opz"
                        >
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              schema  不存在
                            </span>
                          </div>
                        </div>
                        <div
                          class="result-item has-delete-rule-wrapper css-1v03opz"
                        >
                          <span
                            class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                          >
                            该规则已删除
                          </span>
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              除了自增列及大字段列之外，每个列都必须添加默认值
                            </span>
                          </div>
                        </div>
                        <div
                          class="result-item has-delete-rule-wrapper css-1v03opz"
                        >
                          <span
                            class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                          >
                            该规则已删除
                          </span>
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              主键建议使用 BIGINT 无符号类型，即 BIGINT UNSIGNED
                            </span>
                          </div>
                        </div>
                        <div
                          class="result-item has-delete-rule-wrapper css-1v03opz"
                        >
                          <span
                            class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                          >
                            该规则已删除
                          </span>
                          <div
                            class="css-1avyf41"
                          >
                            <span
                              class="icon-wrapper"
                            >
                              <svg
                                height="20"
                                viewBox="0 0 16 16"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                                  fill="#F66074"
                                />
                              </svg>
                            </span>
                            <span
                              class="text-wrapper"
                            >
                              新建表建议加入 IF NOT EXISTS，保证重复执行不报错
                            </span>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <span
                                  class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                                >
                                  <svg
                                    color="#4583FF"
                                    height="18"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                  <span>
                                    <span
                                      class="sql-source-title"
                                    >
                                      所在文件
                                    </span>
                                     
                                    -
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-txh9fw"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M512 938.667c-53.333 0-384-257.259-384-469.334s171.925-384 384-384 384 171.926 384 384-330.667 469.334-384 469.334m0-352c64.8 0 117.333-52.534 117.333-117.334S576.8 352 512 352s-117.333 52.533-117.333 117.333S447.2 586.667 512 586.667"
                              fill="#4583FF"
                            />
                          </svg>
                          <span>
                            <span
                              class="sql-source-title"
                            >
                              所在行
                            </span>
                            -
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="actiontech-sql-view-only-editor-renderer-wrapper custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                      value="CREATE TABLE task (  id INT AUTO_INCREMENT PRIMARY KEY,  title VARCHAR(255) NOT NULL,  description TEXT,  status ENUM('pending', 'completed') NOT NULL DEFAULT 'pending',  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,  updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP);"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
